Bug 98865 - Tests failure on Chromium Mac after r130821
Summary: Tests failure on Chromium Mac after r130821
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac Unspecified
: P2 Normal
Assignee: Levi Weintraub
URL:
Keywords:
: 98867 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-09 23:35 PDT by Enrica Casucci
Modified: 2012-10-10 19:47 PDT (History)
7 users (show)

See Also:


Attachments
Patch (3.39 KB, patch)
2012-10-10 18:03 PDT, Levi Weintraub
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Enrica Casucci 2012-10-09 23:35:28 PDT
The following tests are still failing on Mac Chromium.

[ Mac ]fast/lists/003-vertical.html [Failure]
[ Mac ]fast/text/international/vertical-text-glyph-test.html [Failure]
[ Mac ]fast/text/shaping/shaping-selection-rect.html [Failure]

even after disabling the optimization for HarfBuzz.
Updated TextExpectations.
Comment 1 Adam Barth 2012-10-10 00:03:53 PDT
*** Bug 98867 has been marked as a duplicate of this bug. ***
Comment 2 mitz 2012-10-10 00:48:57 PDT
Enrica and I think that this is related to Chromium’s use of HarfBuzz on Mac. It’s also possible, though seems unlikely, that it’s related to sub-pixel layout.
Comment 3 Tony Chang 2012-10-10 10:30:39 PDT
If the tests are still failing, should we re-enable the optimization for harfbuzz-ng platforms?

Maybe bashi has time to look into these failures.
Comment 4 Levi Weintraub 2012-10-10 10:33:17 PDT
This isn't a sub-pixel issue. The differences here are in the float values in the line box tree. My money is on HarfBuzz as well :)

Thanks for helping us track this.
Comment 5 Enrica Casucci 2012-10-10 10:35:31 PDT
I think this is a good plan. To re-enable the optimization, all that needs to be done is remove the 
#if USE(HARFBUZZ_NG) and the remove the UNUSED_PARAMETER at the beginning of setLogicalWidthForTextRun
Comment 6 Levi Weintraub 2012-10-10 18:03:08 PDT
Created attachment 168109 [details]
Patch
Comment 7 Enrica Casucci 2012-10-10 18:35:56 PDT
Comment on attachment 168109 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=168109&action=review

> Source/WebCore/rendering/RenderBlockLineLayout.cpp:715
> +#if !(PLATFORM(CHROMIUM) && OS(DARWIN))

I think you want this to be 
#if (PLATFORM(CHROMIUM) && OS(DARWIN)) otherwise you get a compilation error
Comment 8 WebKit Review Bot 2012-10-10 19:47:03 PDT
Comment on attachment 168109 [details]
Patch

Clearing flags on attachment: 168109

Committed r131000: <http://trac.webkit.org/changeset/131000>
Comment 9 WebKit Review Bot 2012-10-10 19:47:06 PDT
All reviewed patches have been landed.  Closing bug.