Tests failure on Chromium Mac after r130821 https://bugs.webkit.org/show_bug.cgi?id=98865

Reviewed by Adam Barth.

Source/WebCore:

Updating the check for USE(HARFBUZZ_NG) to check for Mac Chromium, as the HARFBUZZ_NG flag isn't
actually set, despite us using Harfbuzz. This unbreaks Chromium Mac as we diagnose the root
cause of this issue.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::setLogicalWidthForTextRun):

LayoutTests:

Removing failing test entries.

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/116972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131000 268f45cc-cd09-0410-ab3c-d52691b4dbfc